# Plastinin_Graph_course_2025

./: README.md
.github/workflows/: ci.yml
scripts/: ci.sh
task1/: CMakeLists.txt
task1/include/: node.hpp  side.hpp  tree.hpp
task1/src/: CMakeLists.txt  main.cpp  side.cpp
task2/: CMakeLists.txt
task2/include/algorithms/: bellman_ford.hpp  bfs.hpp  dfs.hpp  dijkstra.hpp  johnson.hpp  sssp.hpp
task2/include/graph/: graph.hpp  utils.hpp
task2/src/: CMakeLists.txt  main.cpp  utils.cpp
task2/tests/: CMakeLists.txt  tests.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt  task3.cpp
